<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Halaman3">

    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/callname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callname"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_bold"/>
        <EditText
            android:id="@+id/budi"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/callname"
            android:hint="@string/budi"
            android:paddingBottom="25dp"/>
        <TextView
            android:id="@+id/age"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/budi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourage"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_bold"/>
        <EditText
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:hint="@string/old"
            android:paddingBottom="25dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:gravity="center">
        <Button
            android:id="@+id/selanjutnya"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonyellow"
            android:text="Selanjutnya"
            android:textAllCaps="false"/>
    </RelativeLayout>
</LinearLayout>