<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Halaman2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/kodekeluarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/familycode"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kodekeluarga"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/attention"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputcode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/warning"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:fontFamily="@font/nunito_bold"
            android:inputType="text"
            android:text="A1B2C3"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/syarat"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputcode"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/syarat"
            android:textAlignment="center"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/syarat2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/syarat"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:text="@string/user"
            android:textSize="12sp" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/syarat2"
            android:layout_marginTop="14dp"
            android:background="@drawable/buttonyellow"
            android:fontFamily="@font/nunito_bold"
            android:onClick="Masuk"
            android:text="Masuk"
            android:textAllCaps="false"
            android:textSize="18dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="@color/whiteTree"
        android:gravity="center">

        <TextView
            android:id="@+id/belum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/havenocode"
            android:textAlignment="center"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnBeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/belum"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/buttonblue"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/buyhere"
            android:textAllCaps="false"
            android:textColor="@color/whiteTree"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>